--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ layout: base
           </div>
           <div class="timeline-marker"></div>
           <div class="timeline-content">
-            <h3 class="timeline-title">{{ event[1] }}</h3>
+            <h3 class="timeline-title"><pre>{{ event[1] }}</pre></h3>
           </div>
         </li>
         {% endfor %}
