--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@ layout: base
           </div>
           <div class="timeline-marker"></div>
           <div class="timeline-content">
-            <h3 class="timeline-title">{{ event[1] }}</h3>
+            {% if event[1] contains '\n' %}
+              <h3 class="timeline-title multiline">{{ event[1] }}</h3>
+            {% else %}
+              <h3 class="timeline-title">{{ event[1] }}</h3>
+            {% endif %}
           </div>
         </li>
         {% endfor %}
