--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@ layout: base
           <div class="timeline-info"></div>
           <div class="timeline-marker"></div>
           <div class="timeline-content">
-            <h2 class="timeline-title">{{ period.name }}</h2>
+            {% if event[1] contains '\n' %}
+              <h2 class="timeline-title multiline">{{ period.name }}</h2>
+            {% else %}
+              <h2 class="timeline-title">{{ period.name }}</h2>
+            {% endif %}
           </div>
         </li>
       {% endif %}
@@ -34,11 +38,7 @@ layout: base
           </div>
           <div class="timeline-marker"></div>
           <div class="timeline-content">
-            {% if event[1] contains '\n' %}
-              <h3 class="timeline-title multiline">{{ event[1] }}</h3>
-            {% else %}
               <h3 class="timeline-title">{{ event[1] }}</h3>
-            {% endif %}
           </div>
         </li>
         {% endfor %}
